定时任务--银信网创

--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,7 @@
 
 	</dependencies>
 	<build>
-		<finalName>quartz-spring_demo</finalName>
+		<finalName>quartzSpringDemo</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
