--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,7 +6,8 @@ log4j.addivity.org.apache=true
 # Console Appender
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.Threshold=INFO
-log4j.appender.CONSOLE.encoding=UTF-8
+#log4j.appender.CONSOLE.encoding=UTF-8
+log4j.appender.Console.Encoding=GBK
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
